src/kube/argocd/argocd-ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  annotations:
    alb.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: "argocd-ingress"
  namespace: "argocd"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "argocd.kube"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "argocd-server"
                port:
                  name: "http"
